[project]
name = "docker2mqtt"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "paho-mqtt>=1.6.0,<2.0.0",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
